tests/errors/sem25.kt
// Expected error: cannot increment nullable variable counter
fun main() {
    var counter: Int? = 0;
    counter++;
}